--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,10 @@ hr {
 
 .panel-group .panel:hover {
     margin-bottom: 5px;
+    padding-left: 8px;
+    border-left-width: 9px;
     border-radius: 9px;
-    border: 1px 1px 1px 9px;
+    border: 1px solid #2979ff;
 }
 
 .panel-primary {
