--- a/css/style.css
+++ b/css/style.css
@@ -183,3 +183,10 @@ hr {
 .dropdown-toggle:hover {
     color: gray;
 }
+
+.slider-img{
+    height: 40px;
+    width: 40px; 
+    border-radius: 50%;
+    margin: 5px 7px;
+}
